tests/FSharp.Analyzers.Tests/data/string/lastindexof/negative/Char.fs
module M

open System
"foo".LastIndexOf('f')
